@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.faros.on-air" name="Faros On-Air" version="1.4.0" provider-name="Twilight0">
+<addon id="plugin.video.faros.on-air" name="Faros On-Air" version="1.4.1" provider-name="Twilight0">
     <requires>
         <import addon="xbmc.addon" version="16.1.000"/>
         <import addon="plugin.video.youtube" version="6.8.10"/>
@@ -20,7 +20,11 @@
         <size>738082</size>
         <website>https://farosonair.com/</website>
         <source>https://github.com/Twilight0/plugin.video.faros.on-air</source>
-        <news>16-03-2021 - [B]1.4.0[/B]
+        <news>18-03-2021 - [B]1.4.1[/B]
+- Revert function cache
+- Bug fixes
+
+16-03-2021 - [B]1.4.0[/B]
 - Utilize function cache instead of get
 - Fixes into addon.xml
 
