@@ -1,3 +1,7 @@
+18-03-2021 - [B]1.4.1[/B]
+- Revert function cache
+- Bug fixes
+
 16-03-2021 - [B]1.4.0[/B]
 - Utilize function cache instead of get
 - Fixes into addon.xml
